# ksefcio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: pyproject.toml
backend/certs/: cck-ksef.crt  cck-mf-root.crt
backend/src/ksefcio/: auth.py  db.py  ksef_auth.py  ksef_proxy.py  main.py
client/: README.md  pyproject.toml
client/src/ksefcio_client/: agent.py  agent_client.py  crypto.py  invoice.py  ksef_backend.py  mcp_shim.py  protocol.py  socket_path.py  tools.py
client/tests/: test_agent_socket.py  test_crypto.py  test_invoice.py
examples/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  crypto.ts  invoiceParser.ts  ksef.ts  router.ts  style.css  transferGenerator.ts
frontend/src/stores/: auth.ts  entities.ts  invoices.ts
frontend/src/views/: BasketView.vue  InvoiceDetailView.vue  InvoicesView.vue  LoginView.vue  SettingsView.vue
