[project]
name = "ksefcio-client"
version = "0.1.0"
description = "Local credential agent and MCP shim for ksefcio."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0",
    "httpx>=0.28",
    "mcp>=1.0",
]

[project.scripts]
ksefcio-agent = "ksefcio_client.agent:main"
ksefcio-mcp = "ksefcio_client.mcp_shim:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksefcio_client"]
